--- a/style.css
+++ b/style.css
@@ -1,49 +1,96 @@
-.container {
-  margin: 0 auto;
-  max-width: 800px;
+* {
+  box-sizing: border-box;
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
 }
 
-.jobs {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+body {
+  padding: 20px;
+}
+
+#jobs-container {}
+
+.job-container {
+  /*margin-bottom: 10px;*/
 }
 
 .job {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
+  background-color: #f1f1f1;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  padding: 10px;
+  margin-bottom: 10px;
 }
 
-.job:not(:first-child) {
-  margin-top: 20px;
+.job table {
+  border: 0px solid red;
+  width: 100%;
 }
 
-.stage {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  margin-right: 10px;
+.job td {
+  border: 0px solid red;
 }
 
-.stage:not(:last-child) {
-  border-right: 1px solid black;
-  padding-right: 10px;
+.job td.energy-label {
+  text-align: right;
+  min-width: 100px;
 }
 
-label {
-  margin-right: 10px;
+.job div {
+  margin-bottom: 5px;
 }
 
-select,
-input[type="number"] {
+.job label {
+  margin-left: 5px;
+  margin-right: 5px;
+  min-width: 
+}
+
+.job select,
+.job input[type="number"] {
   padding: 5px;
-  font-size: 16px;
+  border: none;
+  background-color: #ddd;
+  border-radius: 3px;
+  width: 100%
+}
+
+.job select {
   margin-right: 10px;
 }
 
-button {
+.job div input[type="number"] {
+  flex: 0 0 100px;
+  /*width: 100px;*/
+}
+
+.job div label.quantity-label {
+  margin-right: 5px;
+  width: 200px;
+}
+
+/* .job div label[for^="placement"] { */
+  /*width: 200px;*/
+  /* flex: 0 0 200px; */
+/* } */
+
+.job label + label {
+  margin-left: 10px;
+}
+
+#add-job-button {
   margin-top: 20px;
   padding: 10px;
-  font-size: 16px;
+  border: none;
+  background-color: #008CBA;
+  color: white;
+  font-weight: bold;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+#total-energy-label {
+  font-weight: bold;
+  margin-left: 10px;
 }
