Quite functional first stage, incl. conversions

--- a/css/style.css
+++ b/css/style.css
@@ -108,3 +108,10 @@ body {
   font-weight: bold;
   margin-left: 10px;
 }
+
+p.citation {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  max-width: 300px;
+}
