--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,7 @@ button {
 #project-table {
   border: 0px solid red;
   width: 100%;
+  border-spacing: 2px 2px;
 }
 
 #project-table tr {
@@ -60,6 +61,7 @@ tr.project-list-row {
 .project-list-row label {
   color: #008CBA;
   padding-left: 4px;
+  cursor: pointer;
   /*font-weight: bold;*/
 }
 
@@ -69,23 +71,23 @@ tr.project-list-row {
     float: left;
     width: 20px;
     height: 20px;
-    padding: 2px;
+    padding: 8px;
 }
 
 #project-table button.icon-button-save {
-    background: url(../image/save-16.ico) no-repeat;
+    background: url(../image/save-16.ico) no-repeat center;
 }
 
 #project-table button.icon-button-download {
-    background: url(../image/download-16.ico) no-repeat;
+    background: url(../image/download-16.ico) no-repeat center;
 }
 
 #project-table button.icon-button-upload {
-    background: url(../image/upload-16.ico) no-repeat;
+    background: url(../image/upload-16.ico) no-repeat center;
 }
 
 #project-table button.icon-button-delete {
-    background: url(../image/delete-16.ico) no-repeat;
+    background: url(../image/delete-16.ico) no-repeat center;
 }
 
 /* ------------------------------ JOB ------------  */
