--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,51 @@ button {
   cursor: pointer;
 }
 
+/* ------------------------------- COLLAPSIBLE ---- */
+/* Modified from https://www.w3schools.com/howto/howto_js_collapsible.asp */
+.collapsible {
+  background-color: #eee;
+  color: #444;
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 15px;
+}
+
+/* Add a background color to the button if it is clicked on (add the .active class with JS),
+and when you move the mouse over it (hover) */
+.active, .collapsible:hover {
+  background-color: #ccc;
+}
+
+.collapsible-content {
+  /*padding: 0 18px;*/
+  /* background-color: white;*/
+  /*max-height: 0;*/
+  max-height: 100%;
+  /*display: flex;
+  flex-direction: column;*/
+  overflow: hidden;
+  transition: max-height 0.2s ease-out;
+}
+
+.collapsible:after {
+  /*
+  content: '\02795';
+  font-size: 13px;
+  color: white;
+  float: right;
+  margin-left: 5px;*/
+}
+
+.active:after {
+  /*
+  content: "\2796"; */
+}
+
 /* ------------------------------ PROJECT LIST ---- */
 
 #project-menu {
@@ -37,6 +82,10 @@ button {
   max-width:350px;
   float: left;
   margin-right: 10px;
+}
+
+#project-menu h2 {
+  padding-bottom: 10px;
 }
 
 #project-table {
@@ -107,7 +156,41 @@ tr.project-list-row {
   border: 1px solid #ccc;
   border-radius: 5px;
   padding: 10px;
+  padding-bottom: 0px;
   margin-bottom: 10px;
+}
+
+.job-header {
+  width: 100%;
+  font-size: 20px;
+  color: white;
+  padding: 8px;
+  background-color: #0099cc;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  /*align-content: space-between*/
+}
+
+.job-header:hover {
+  background-color: #008CBA;
+}
+
+h2.job-name {
+}
+
+input.job-name-input {
+  font-size: 20px;
+  padding: 2px;
+}
+
+.job-mh-label {
+  text-align: right;
+  float: right;
+  font-weight: bold;
+  font-size: 20px;
+  min-width: 100px;
 }
 
 .job table {
@@ -117,12 +200,6 @@ tr.project-list-row {
 
 .job td {
   border: 0px solid red;
-}
-
-.job-mh-label {
-  text-align: right;
-  font-weight: bold;
-  min-width: 100px;
 }
 
 .job div {
@@ -175,12 +252,18 @@ tr.project-list-row {
 }
 
 .stage-header {
+  width: 100%;
   background-color: #d0d0d0;
   font-weight: bold;
+  /*font-size: 20px;*/
+  padding: 4px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
 .stage-mh-label {
-  text-align: right;
+  /*text-align: right;*/
 }
 
 #add-job-button {
