--- a/css/style.css
+++ b/css/style.css
@@ -32,51 +32,6 @@ button {
   cursor: pointer;
 }
 
-/* ------------------------------- COLLAPSIBLE ---- */
-/* Modified from https://www.w3schools.com/howto/howto_js_collapsible.asp */
-.collapsible {
-  background-color: #eee;
-  color: #444;
-  cursor: pointer;
-  padding: 18px;
-  width: 100%;
-  border: none;
-  text-align: left;
-  outline: none;
-  font-size: 15px;
-}
-
-/* Add a background color to the button if it is clicked on (add the .active class with JS),
-and when you move the mouse over it (hover) */
-.active, .collapsible:hover {
-  background-color: #ccc;
-}
-
-.collapsible-content {
-  /*padding: 0 18px;*/
-  /* background-color: white;*/
-  /*max-height: 0;*/
-  max-height: 100%;
-  /*display: flex;
-  flex-direction: column;*/
-  overflow: hidden;
-  transition: max-height 0.2s ease-out;
-}
-
-.collapsible:after {
-  /*
-  content: '\02795';
-  font-size: 13px;
-  color: white;
-  float: right;
-  margin-left: 5px;*/
-}
-
-.active:after {
-  /*
-  content: "\2796"; */
-}
-
 /* ------------------------------ PROJECT LIST ---- */
 
 #project-menu {
@@ -287,3 +242,113 @@ p.citation {
   white-space: nowrap;
   max-width: 300px;
 }
+
+
+/* ------------------------------- COLLAPSIBLE ---- */
+/* Modified from https://www.w3schools.com/howto/howto_js_collapsible.asp */
+.collapsible {
+  background-color: #eee;
+  color: #444;
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 15px;
+}
+
+/* Add a background color to the button if it is clicked on (add the .active class with JS),
+and when you move the mouse over it (hover) */
+.active, .collapsible:hover {
+  background-color: #ccc;
+}
+
+.collapsible-content {
+  /*padding: 0 18px;*/
+  /* background-color: white;*/
+  /*max-height: 0;*/
+  max-height: 100%;
+  /*display: flex;
+  flex-direction: column;*/
+  overflow: hidden;
+  transition: max-height 0.2s ease-out;
+}
+
+.collapsible:after {
+  /*
+  content: '\02795';
+  font-size: 13px;
+  color: white;
+  float: right;
+  margin-left: 5px;*/
+}
+
+.active:after {
+  /*
+  content: "\2796"; */
+}
+
+/* ----------------------------------- TOOLTIP ---- */
+/* Modified from https://www.w3schools.com/howto/howto_css_tooltip.asp */
+
+/* Tooltip container */
+.tooltip {
+  position: relative;
+  display: inline-block;
+}
+
+/* Tooltip text */
+.tooltip .tooltip-text {
+  visibility: hidden;
+  width: 240px;
+  background-color: #555;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px 0;
+  position: absolute;
+  z-index: 1;
+  /*bottom: 125%;*/
+  /*left: 50%;*/
+  /*margin-left: -60px;*/
+  opacity: 0;
+  transition: opacity 0.3s;
+}
+
+/* Tooltip arrow */
+/*
+.tooltip .tooltip-text::after {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  margin-left: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: #555 transparent transparent transparent;
+}*/
+
+/* Show the tooltip text when you mouse over the tooltip container */
+.tooltip:hover .tooltip-text {
+  visibility: visible;
+  opacity: 1;
+}
+
+.tooltip-left {
+  top: -5px;
+  bottom: auto;
+  right: 128%;
+}
+
+.tooltip-left::after {
+  content: "";
+  position: absolute;
+  top: 16px;
+  left: 100%;
+  margin-top: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: transparent transparent transparent #555;
+}
+
