--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,20 @@ button {
   cursor: pointer;
 }
 
+/* grey panel with rounded corners */
+.panel {
+  background-color: #f1f1f1;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  padding: 10px;
+  margin-bottom: 10px;
+  width: 100%;
+}
+
+.no-break-label {
+  display:inline;
+}
+
 /* ------------------------------- COLLAPSIBLE ---- */
 /* Modified from https://www.w3schools.com/howto/howto_js_collapsible.asp */
 .collapsible {
@@ -80,16 +94,10 @@ and when you move the mouse over it (hover) */
 
 /* ------------------------------ PROJECT LIST ---- */
 
-#project-menu {
-  background-color: #f1f1f1;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  padding: 10px;
-  margin-bottom: 10px;
-  width: 100%;
+#project-list {
 }
 
-#project-menu h2 {
+#project-list h2 {
   padding-bottom: 10px;
 }
 
@@ -161,12 +169,7 @@ tr.project-list-row {
 }
 
 .job {
-  background-color: #f1f1f1;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  padding: 10px;
   padding-bottom: 0px;
-  margin-bottom: 10px;
 }
 
 .job-header {
