--- a/css/style.css
+++ b/css/style.css
@@ -309,10 +309,10 @@ input.job-name-input {
   /*text-align: right;*/
 }
 
-#add-job-button {
+button.project-menu-button {
   margin-top: 10px;
   margin-bottom: 10px;
-  padding: 6px;
+  padding: 4px 6px 4px 6px;
 }
 
 #total-energy-label {
